2016-11-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_lazy_mpm.c:
    * src/mod_rivet_ng/worker_prefork_mpm.c: setting
    the running_conf pointer in the thread private
    data enables ::rivet::inspect to return 
    meaningful data even outside of request processing (in
    the forms that make sense)
    * src/mod_rivet_ng/rivetCore.c: more accurate
    determination of the rivet_server_rec makes
    possible to determine the pointer also
    outside a request processing

2016-11-28 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/: new configuration directives
    RequestHandler (request handling procedure), ImportRivetNS
    and ExportRivetNS (override parameters for
    build options). RequestHandler enables rivet
    to run an application specific request handler.
    * src/mod_rivet_ng/rivetInspect.c: now runs also
    during the server initialization stage. The whole
    rivet core is setup during that phase but only
    a few commands are actually operational (most
    of them make sense only during an HTTP request processing)

2016-11-23 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/form/form.tcl,form2.tcl: fix full
    qualification of the ::rivet::lempty command
    * src/mod_rivet_ng/mod_rivet_common.c: changed or removed
    old comments that don't apply to the current code
    * configure.ac: now quoting strings when passed 
    to macro AC_MSG_CHECKING

2016-11-22 Damon J. Courtney <damon.courtney@gmail.com>
    * rivet/init.tcl.it: Rewrite init.tcl.in from the top down

2016-11-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-class.tcl:
    * rivet/packages/form/form.tcl,form2.tcl: now
    fully qualifying mod_rivet commands, fixed
    'file' method that emits an 'email' HTML input element
    * doc/xml/formbroker.xml: correct coding example

2016-11-19 Massimo Manghi <mxmanghi@apache.org>
    * src/mod-rivet/rivetInspect.c: now returning